--- a/thd/index.html
+++ b/thd/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="">
+  <link rel="icon" href="assets/images/logo.png">
   <link
     href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
     rel='stylesheet' type='text/css'>
@@ -365,19 +365,19 @@
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-  <script src='js/waypoints.min.js'></script>
+  <script src='js/waypoint.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
     integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
   </script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/skrollr.js"></script>
+  <script src="js/skroller.js"></script>
   <!--[if lt IE 9]>
 <script type="text/javascript" src="js/skrollr.ie.min.js"></script>
 <![endif]-->
   <script src="js/svg.js"></script>
   <!-- <script src="js/bootstrap.min.js"></script> -->
-  <script src="js/imagesloaded.js"></script>
-  <script src="js/_main.js"></script>
+  <script src="js/imagesload.js"></script>
+  <script src="js/main.js"></script>
  
 
 
