--- a/thd/waterMitigation.html
+++ b/thd/waterMitigation.html
@@ -208,8 +208,9 @@
       </div>
 
     </div>
-<a href="index.html" class="text-center">Return to Home Page</a>
+
   </section>
+<section><a href="index.html" class="text-center btn btn-primary" style="margin:15px auto;display:table">Return to Home Page</a></section>
 
   <section id="slide-6" class="homeSlide ft-section">
     <div class="container" data-anchor-target="#slide-6">
