--- a/thd/waterMitigation.html
+++ b/thd/waterMitigation.html
@@ -41,7 +41,7 @@
   </section>
 
 
-  <section id="slide-3" class="homeSlide wt-mg-section main-banner">
+  <section id="slide-3" class="homeSlide wt-mg-section pb-5" style="border-top: 5px solid #e7430a;">
     <div class="container" data-anchor-target="#slide-3">
       <div class="THD-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center" data-anchor-target="#slide-3">
         <h1 class="display-4">Water Mitigation</h1>
@@ -208,9 +208,8 @@
       </div>
 
     </div>
-
+<a href="index.html" class="text-center btn btn-primary" style="margin:0px auto;display:table">Return to Home Page</a>
   </section>
-<section><a href="index.html" class="text-center btn btn-primary" style="margin:15px auto;display:table">Return to Home Page</a></section>
 
   <section id="slide-6" class="homeSlide ft-section">
     <div class="container" data-anchor-target="#slide-6">
