--- a/thd/index.html
+++ b/thd/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="assets/images/logo.png">
@@ -25,7 +24,7 @@
   <section id="slide-1" class="homeSlide">
     <div data-anchor-target="#slide-1">
     <div class="container" data-anchor-target="#slide-1">
-      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white">
+      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white">
         <a href="#" class="my-0 mr-md-auto font-weight-normal">
           <img src="assets/images/logo.png">
         </a>
@@ -47,8 +46,8 @@
         <div class="carousel-item active">
           <div class="container">
             <div class="carousel-caption">
-              <h1>High Qulity Services</h1>
-              <h3>We specialize in Cleaning, Consulting & Contruction...</h3>
+              <h1>Cleaning Services</h1>
+              <h3>We expertise in all kind of cleaning services...</h3>
             </div>
             <div class="info-img">
               <img src="assets/images/banner-1-inner.png" alt="First slide">
@@ -61,15 +60,15 @@
         <div class="carousel-item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>High Qulity Services</h1>
-              <h3>We specialize in Cleaning, Consulting & Contruction...</h3>
+              <h1>Contruction Services</h1>
+              <h3>We remodel, rebuild, and new construction</h3>
             </div>
             <div class="info-img">
-              <img src="assets/images/banner-1-inner.png" alt="First slide">
+              <img src="assets/images/banner-2-inner.png" alt="First slide">
             </div>
           </div>
           <div class="picsum-img-wrapper">
-            <img src="assets/images/banner-1.jpg">
+            <img src="assets/images/banner-2.jpg">
           </div>
         </div>
 
@@ -79,12 +78,12 @@
               <h1>High Qulity Services</h1>
               <h3>We specialize in Cleaning, Consulting & Contruction...</h3>
             </div>
-            <div class="info-img">
-              <img src="assets/images/banner-1-inner.png" alt="First slide">
-            </div>
+            <!-- <div class="info-img">
+              <img src="assets/images/banner-3-inner.png" alt="First slide">
+            </div> -->
           </div>
           <div class="picsum-img-wrapper">
-            <img src="assets/images/banner-1.jpg">
+            <img src="assets/images/banner-3.jpg">
           </div>
         </div>
       </div>
