--- a/thd/index.html
+++ b/thd/index.html
@@ -261,7 +261,7 @@
               nulla.</p>
           </div>
           <div class="col-md-4 col-lg-4 col-sm-12">
-            <img src="assets/images/info-5.jpg">
+            <img src="assets/images/info-5.jpg" class="img-width">
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
         <h1 class="display-4 text-center">General Contractor</h1>
         <div class="row">
           <div class="col-md-4 col-lg-4 col-sm-12">
-            <img src="assets/images/info-6.jpg">
+            <img src="assets/images/info-6.jpg" class="img-width">
           </div>
           <div class="col-md-8 col-lg-8 col-sm-12">
             <h5>Need covic 19 contentn here.</h5>
