--- a/thd/waterMitigation.html
+++ b/thd/waterMitigation.html
@@ -227,7 +227,7 @@
               Around the clock service, Over 20yrs Experience, </br>
               Consultant Emergency Water Mitigation, Covid 19 Service
             </p>
-            <a href="#">Email - support@thdconstructions.co </a></br>
+            <a href="mailto:support@thdconstructions.co">Email - support@thdconstructions.co </a></br>
             <a href="#">Call - (901)353-9806, (901)228-4010</a>
             <h5 class="mt-2">Follow Us</h5>
             <a href="#">
