--- a/thd/waterMitigation.html
+++ b/thd/waterMitigation.html
@@ -217,8 +217,7 @@
         <div class="row">
           <div class="col-md-4 col-lg-4 col-sm-12">
             <img class="mb-2 text-center ft-logo" src="assets/images/logo.png" alt="">
-            <small class="d-block mb-3 text-muted text-center">Tennessee Home</br>
-              Defense, Inc.</small>
+            <small class="d-block mb-3 text-center">Tennessee Home Defense, Inc.</small>
           </div>
 
           <div class="col-md-4 col-lg-4 col-sm-12">
@@ -227,7 +226,7 @@
               Around the clock service, Over 20yrs Experience, </br>
               Consultant Emergency Water Mitigation, Covid 19 Service
             </p>
-            <a href="mailto:support@thdconstructions.co">Email - support@thdconstructions.co </a></br>
+            <a href="#">Email - support@thdconstructions.co </a></br>
             <a href="#">Call - (901)353-9806, (901)228-4010</a>
             <h5 class="mt-2">Follow Us</h5>
             <a href="#">
