--- a/bw/index.html
+++ b/bw/index.html
@@ -16,6 +16,9 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-theme.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -95,6 +98,7 @@
                   <h3>We do Eco-friendly <br>
                     processes to collect <br>
                     the waste</h3>
+                    <span></span>
                 </div>
                </div>
               <div class="picsum-img-wrapper">
@@ -108,6 +112,7 @@
                   <h3>We do Eco-friendly <br>
                     processes to collect <br>
                     the waste</h3>
+                    <span></span>
                 </div>
               </div>
               <div class="picsum-img-wrapper">
@@ -121,6 +126,7 @@
                   <h3>We do Eco-friendly <br>
                     processes to collect <br>
                     the waste</h3>
+                    <span></span>
                 </div>
               </div>
               <div class="picsum-img-wrapper">
@@ -143,7 +149,10 @@
   </section>
   <section class="lable-strip">
     <div class="container">
-      <h5> Reach us for any query or information at 240-543-6487</h5> 
+      <h5> Reach us for any query or information at 240-543-6487
+        <span class="triangle-left "></span>
+        <span class="triangle-right "></span>
+      </h5> 
     </div>
   </section>
 
@@ -190,7 +199,7 @@
       <div class="col-md-4 col-lg-4 col-sm-12 col">
           <img src="./images/info-1.jpg" alt="">
       </div>
-      <div class="col-md-4 col-lg-4 col-sm-12 col">
+      <div class="col-md-4 col-lg-4 col-sm-12 col space-manage">
         <h2>Our Commitment</h2>
         <p>Barbour Waste Removal, LLC is committed to providing quality waste removal/recycling services focusing on the client’s needs. </p>
         <a href="">Know more</a>
@@ -198,7 +207,10 @@
     <div class="col-md-4 col-lg-4 col-sm-12 col">
       <img src="./images/info-2.jpg" alt="">
   </div>
-  <div class="col-md-4 col-lg-4 col-sm-12 col">
+    </div>
+
+    <div class="container our-achiememnts">  
+  <div class="col-md-4 col-lg-4 col-sm-12 col space-manage">
     <h2>Service Area </h2>
     <p>- District of Columbia (DC) <br>
       - Southern and Northern Maryland <br>
@@ -207,16 +219,17 @@
 <div class="col-md-4 col-lg-4 col-sm-12 col">
   <img src="./images/info-3.jpg" alt="">
 </div>
-<div class="col-md-4 col-lg-4 col-sm-12 col">
+<div class="col-md-4 col-lg-4 col-sm-12 col space-manage">
   <h2>Certification</h2>
   <p>MBE certified with Maryland Department of Transportation (MDOT), Prince Georges CountyBased Business, 
    <br> Washington Suburban Sanitary Commission (WSSC), and Washington  </p>
   <a href="">Know more</a>
 </div>
     </div>
+
   </section>
 
-  <section>
+  <section class="g-o">
     <div class="container">
       <div class="THD-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Our Goals & Objectives</h1>
@@ -225,7 +238,7 @@
           Achieve 100% customer satisfaction <br>
           Maintain 100% employee satisfaction <br>
         </p>
-        <a href="waterMitigation.html" class="btn btn-primary">Read More</a>
+        <a href="#" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </section>
