--- a/bw/aboutus.html
+++ b/bw/aboutus.html
@@ -15,10 +15,10 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -47,7 +47,7 @@
           <img src="./images/logo.png">
         </a>
         <div> 
-          <h5 class="text-right"> Barbour Waste Removal LLC</h5>
+          <h4 class="text-right"> Barbour Waste Removal LLC</h4>
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
 
   </section>
 
-  <section class="inner-section">
+  <section class="inner-section-o-g">
     <div class="container">
       <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Our Goals & Objectives</h1>
@@ -192,14 +192,14 @@
           <div class="col-md-3 col-lg-3 col-sm-12">
             <h4>Follow Us</h4>
             <a href="#">
-              <i class="icon icon-medium">
+              <i class="icon icon-small">
                 <svg focusable="false">
                   <use xlink:href="#icon_twitter"></use>
                 </svg>
               </i>
             </a>
             <a href="#">
-              <i class="icon icon-medium">
+              <i class="icon icon-small">
                 <svg focusable="false">
                   <use xlink:href="#icon_facebook"></use>
                 </svg>
