--- a/bw/aboutus.html
+++ b/bw/aboutus.html
@@ -17,8 +17,8 @@
   <link href="css/bootstrap-theme.css" rel="stylesheet">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -47,7 +47,7 @@
           <img src="./images/logo.png">
         </a>
         <div> 
-          <h4 class="text-right"> Barbour Waste Removal LLC</h4>
+          <h2 class="text-right"> Barbour Waste Removal LLC</h2>
         </div>
       </div>
     </div>
@@ -90,10 +90,10 @@
   </section>
   <section class="lable-strip">
     <div class="container">
-      <h5> Reach us for any query or information at 240-543-6487
+      <h2> Reach us for any query or information at 240-543-6487
         <span class="triangle-left "></span>
         <span class="triangle-right "></span>
-      </h5> 
+      </h2> 
     </div>
   </section>
 
@@ -152,13 +152,13 @@
   <section class="footer">
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5" >
-        <div class="row">
-          <div class="col-md-3 col-lg-3 col-sm-12">
+        <div class="row d-flex">
+          <div class="col-md-3 col-lg-3 col-sm-12 v-align">
             <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
           </div>
 
           <div class="col-md-3 col-lg-3 col-sm-12">
-            <h4>Quick Links</h4>
+            <h3>Quick Links</h3>
             <ul class="footer-li">
               <li class="active">
                 <a href="index.html">Home</a>
@@ -176,7 +176,7 @@
           </div>
 
           <div class="col-md-3 col-lg-3 col-sm-12">
-            <h4>Quick connect</h4>
+            <h3>Quick connect</h3>
             <p>
               Please send the email to extra qureries.
             </p>
@@ -190,7 +190,7 @@
           </div>
 
           <div class="col-md-3 col-lg-3 col-sm-12">
-            <h4>Follow Us</h4>
+            <h3>Follow Us</h3>
             <a href="#">
               <i class="icon icon-small">
                 <svg focusable="false">
