--- a/mtj/index.html
+++ b/mtj/index.html
@@ -487,6 +487,7 @@ $('.form-btn').on('click', function() {
 });
 $('.closed').on('click', function() {
   $('body').removeClass('form-slider');
+  document.getElementsByTagName("body")[0].removeAttribute("class");
   return false;
 });
 </script>
