--- a/mtj/index.html
+++ b/mtj/index.html
@@ -486,7 +486,7 @@ $('.form-btn').on('click', function() {
   return false;
 });
 $('.closed').on('click', function() {
-  $('body').removeClass('form-slider');
+ // $('body').removeClass('form-slider');
   document.getElementsByTagName("body")[0].removeAttribute("class");
   return false;
 });
