--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -142,12 +142,106 @@
        </div>
     </div>
   </section>
-  <section class="gallary-view">
+  <section class="news-events-view">
     <div class="container">
      <div class="row">
        <div class="col-md-12">
-         <h1>Under Construction</h1>
-         <h3>Coming Sooooooon.</h3>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="news-tab" data-toggle="tab" href="#news" role="tab" aria-controls="news" aria-selected="true">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="events" aria-selected="false">Events</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane active" id="news" role="tabpanel" aria-labelledby="news-tab">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="events" role="tabpanel" aria-labelledby="events-tab">
+            <div class="row ">
+              <div class="col-md-8">
+                <div class="row events-view">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <p> 
+                          <span class="date">30 MAR, 2020</span>
+                        </p>
+                        <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                        </p>
+                        <a href="#"> Read more...</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <p> 
+                          <span class="date">30 MAR, 2020</span>
+                        </p>
+                        <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                        </p>
+                        <a href="#"> Read more...</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
        </div>
      </div>
     </div>
