--- a/mtj/aboutus.html
+++ b/mtj/aboutus.html
@@ -144,7 +144,7 @@
   <section class="about-us">
     <div class="container">
       <div class="row">
-        <div class="col-md-7 mt-0">
+        <div class="col-md-7 col-lg-7 col-sm-12 mt-0">
           <h1>About <span class="heading-highlighter">Melanie Taylor Jefferson</span></h1>
           <p>
             Melanie Taylor Jefferson is an attorney that has been a solo practitionerin the legal eld for almost thirty (30) years.  She graduated from Rhodes College with a Bachelor of Arts in English and a Juris Doctorate Degree from Cecil C. Humphries School of Law at the University of Memphis. 
@@ -168,7 +168,7 @@
             Attorney Taylor Jefferson is married to Jeremy Jefferson; has a stepson named Jacob and two (2) dogs, Molly and Prince.Her hobbies include working out, reading, dancing, enjoying her family and the company of good friends.
           </p>
         </div>
-        <div class="col-md-5 mt-0">
+        <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
           <img src="images/info-1.jpg" alt="">
         </div>
       </div>
@@ -218,7 +218,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -244,7 +244,7 @@
               <div class="item">
                 <div class="testimonial">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -264,7 +264,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -290,7 +290,7 @@
               <div class="item">
                 <div class="testimonial">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -310,7 +310,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -345,7 +345,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -356,26 +356,29 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p>Phone Number : (901) 428-4360<br>
+              <p class="phone">Phone Number : (901) 428-4360<br>
                 Email Address: tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="services.html">Services</a>
+                <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
-                <a href="contactUs.html">Contact Us</a>
+              <li >
+                <a href="gallary.html">GALLARY</a>
+              </li>
+              <li >
+                <a href="contact.html">Connect us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
@@ -397,17 +400,18 @@
               <a href="#">
                 <i class="icon icon-small">
                   <svg focusable="false">
-                    <use xlink:href="#icon_facebook"></use>
+                    <use xlink:href="#icon_instagram"></use>
                   </svg>
                 </i>
               </a>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick connect</h4>
-            <p>
-              Please send the email to extra qureries.
+            <p class="notification">
+              Please subscribe to our newsletter for <br>
+              Update, Events and News.
             </p>
             <form>
               <div class="form-group">
