--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -190,7 +190,7 @@
               <div class="item active">
                 <div class="testimonial">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -211,7 +211,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -237,7 +237,7 @@
               <div class="item">
                 <div class="testimonial">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -257,7 +257,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -283,7 +283,7 @@
               <div class="item">
                 <div class="testimonial">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -303,7 +303,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12">
                       <div class="quotes">
                         <i class="icon icon-medium">
                           <svg focusable="false">
@@ -338,7 +338,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -349,26 +349,29 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p>Phone Number : (901) 428-4360<br>
+              <p class="phone">Phone Number : (901) 428-4360<br>
                 Email Address: tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="services.html">Services</a>
+                <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
-                <a href="contactUs.html">Contact Us</a>
+              <li >
+                <a href="gallary.html">GALLARY</a>
+              </li>
+              <li >
+                <a href="contact.html">Connect us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
@@ -390,17 +393,18 @@
               <a href="#">
                 <i class="icon icon-small">
                   <svg focusable="false">
-                    <use xlink:href="#icon_facebook"></use>
+                    <use xlink:href="#icon_instagram"></use>
                   </svg>
                 </i>
               </a>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick connect</h4>
-            <p>
-              Please send the email to extra qureries.
+            <p class="notification">
+              Please subscribe to our newsletter for <br>
+              Update, Events and News.
             </p>
             <form>
               <div class="form-group">
