--- a/mtj/contact.html
+++ b/mtj/contact.html
@@ -145,7 +145,7 @@
   <section class="about-us">
     <div class="container">
       <div class="row">
-        <div class="col-md-7 mt-0">
+        <div class="col-md-7 col-lg-7 col-sm-12 mt-0">
           <h1>Get in Touch</h1>
           <p>Our team is happy to answer your questions. <br>
             Fill out the form and we will be in touch as soon as possible.</p>
@@ -168,7 +168,7 @@
             <button type="submit" class="btn btn-primary btn-block">Send Message</button>
           </form>
         </div>
-        <div class="col-md-5 mt-0">
+        <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
           <div class="address">
             <p>Tondra Davis, Treasurer</p>
             <h5>Campaign Address</h5>
@@ -197,7 +197,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -208,26 +208,29 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p>Phone Number : (901) 428-4360<br>
+              <p class="phone">Phone Number : (901) 428-4360<br>
                 Email Address: tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="services.html">Services</a>
+                <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
-                <a href="contactUs.html">Contact Us</a>
+              <li >
+                <a href="gallary.html">GALLARY</a>
+              </li>
+              <li >
+                <a href="contact.html">Connect us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
@@ -249,17 +252,18 @@
               <a href="#">
                 <i class="icon icon-small">
                   <svg focusable="false">
-                    <use xlink:href="#icon_facebook"></use>
+                    <use xlink:href="#icon_instagram"></use>
                   </svg>
                 </i>
               </a>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick connect</h4>
-            <p>
-              Please send the email to extra qureries.
+            <p class="notification">
+              Please subscribe to our newsletter for <br>
+              Update, Events and News.
             </p>
             <form>
               <div class="form-group">
