--- a/mtj/index.html
+++ b/mtj/index.html
@@ -207,7 +207,7 @@
   <section class="about-us">
     <div class="container">
       <div class="row">
-        <div class="col-md-7 mt-0">
+        <div class="col-md-7 col-lg-7 col-sm-12  mt-0">
           <div class="bread-crum"><a href="">About Me</a></div>
           <h1>About <span class="heading-highlighter">Melanie E. Taylor Jeffers</span></h1>
           <p>
@@ -221,7 +221,7 @@
           </p>
           <button type="submit" class="btn btn-primary">Read More ></button>
         </div>
-        <div class="col-md-5 mt-0">
+        <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
           <img src="images/info-1.jpg" alt="">
         </div>
       </div>
@@ -230,7 +230,7 @@
   <section class="section-02">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 mt-0">
+        <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
           <img src="images/info-2.jpg" alt="">
         </div>
         <div class="col-md-7 mt-0">
@@ -244,13 +244,13 @@
             reprehenderit in voluptate velit.</p>
 
           <div class="row">
-            <div class="col-md-3 mt-0">
+            <div class="col-md-3 col-lg-3 col-sm-12 mt-0">
               <div class="card">
                 <p>$20</p>
                 <button type="submit" class="btn btn-primary">Donate Now</button>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-lg-3 col-sm-12">
               <div class="card">
                 <p>$50</p>
                 <button type="submit" class="btn btn-primary">Donate Now</button>
@@ -262,7 +262,7 @@
                 <button type="submit" class="btn btn-primary">Donate Now</button>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-lg-3 col-sm-12">
               <div class="card">
                 <p>$200</p>
                 <button type="submit" class="btn btn-primary">Donate Now</button>
@@ -278,7 +278,7 @@
   <section class="section-03">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-6 col-sm-12">
           <div class="endo-info">
             <div class="bread-crum">ENDORSEMENTS</div>
             <h1>WHAT PEOPLE SAY <br>
@@ -388,7 +388,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -399,26 +399,29 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p>Phone Number : (901) 428-4360<br>
+              <p class="phone">Phone Number : (901) 428-4360<br>
                 Email Address: tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="services.html">Services</a>
+                <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
-                <a href="contactUs.html">Contact Us</a>
+              <li >
+                <a href="gallary.html">GALLARY</a>
+              </li>
+              <li >
+                <a href="contact.html">Connect us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
@@ -440,17 +443,18 @@
               <a href="#">
                 <i class="icon icon-small">
                   <svg focusable="false">
-                    <use xlink:href="#icon_facebook"></use>
+                    <use xlink:href="#icon_instagram"></use>
                   </svg>
                 </i>
               </a>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick connect</h4>
-            <p>
-              Please send the email to extra qureries.
+            <p class="notification">
+              Please subscribe to our newsletter for <br>
+              Update, Events and News.
             </p>
             <form>
               <div class="form-group">
