--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -147,8 +147,8 @@
      <div class="row">
        <div class="col-md-12">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" id="news-tab" data-toggle="tab" href="#news" role="tab" aria-controls="news" aria-selected="true">News</a>
+          <li class="nav-item active">
+            <a class="nav-link" id="news-tab" data-toggle="tab" href="#news" role="tab" aria-controls="news" aria-selected="true">News</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="events" aria-selected="false">Events</a>
@@ -157,7 +157,7 @@
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane active" id="news" role="tabpanel" aria-labelledby="news-tab">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
                 <div class="card">
                   <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -171,7 +171,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
                 <div class="card">
                   <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -185,7 +185,49 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
+                <div class="card">
+                  <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <p> 
+                      <span class="date">30 MAR, 2020</span>
+                    </p>
+                    <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                    </p>
+                    <a href="#"> Read more...</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
                 <div class="card">
                   <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -209,11 +251,11 @@
                     <div class="card">
                       <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <p> 
-                          <span class="date">30 MAR, 2020</span>
-                        </p>
                         <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
-                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                       <p class="date"> 
+                          <span>30 MAR, 2020 | Time: 09:00AM - 06:00PM</span>
+                        </p>
+                       <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
                         <a href="#"> Read more...</a>
                       </div>
@@ -221,16 +263,30 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="row">
+              <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
+                <div class="row event-grid">
                   <div class="col-md-12">
                     <div class="card">
+                      <h5>Upcoming event Banner</h5>
                       <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
                       <div class="card-body">
                         <p> 
-                          <span class="date">30 MAR, 2020</span>
+                          <span class="date">30 MAR, 2020 | Time: 09:00AM - 06:00PM</span>
                         </p>
-                        <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
+                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
+                        </p>
+                        <a href="#"> Read more...</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="card">
+                      <h5>Upcoming event Banner</h5>
+                      <img class="card-img-top" src="images/new-1.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <p> 
+                          <span class="date">30 MAR, 2020 | Time: 09:00AM - 06:00PM</span>
+                        </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
                         <a href="#"> Read more...</a>
@@ -252,7 +308,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -263,26 +319,29 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p>Phone Number : (901) 428-4360<br>
+              <p class="phone">Phone Number : (901) 428-4360<br>
                 Email Address: tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="services.html">Services</a>
+                <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
-                <a href="contactUs.html">Contact Us</a>
+              <li >
+                <a href="gallary.html">GALLARY</a>
+              </li>
+              <li >
+                <a href="contact.html">Connect us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
@@ -304,17 +363,18 @@
               <a href="#">
                 <i class="icon icon-small">
                   <svg focusable="false">
-                    <use xlink:href="#icon_facebook"></use>
+                    <use xlink:href="#icon_instagram"></use>
                   </svg>
                 </i>
               </a>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="col-md-4 col-lg-4 col-sm-12 col">
             <h4>Quick connect</h4>
-            <p>
-              Please send the email to extra qureries.
+            <p class="notification">
+              Please subscribe to our newsletter for <br>
+              Update, Events and News.
             </p>
             <form>
               <div class="form-group">
