--- a/mtj/index.html
+++ b/mtj/index.html
@@ -126,7 +126,14 @@
 
           </div>
         </nav>
-        <button type="submit" class="btn btn-primary form-btn">Donate Now ></button>
+        <button type="submit" class="btn btn-primary form-btn">
+          <i class="icon icon-ex-small">
+            <svg focusable="false">
+              <use xlink:href="#icon_donate"></use>
+            </svg>
+          </i>
+          <span>Donate Now ></span>
+        </button>
       </div>
     </div>
 
@@ -244,7 +251,7 @@
             reprehenderit in voluptate velit.</p>
 
           <div class="row">
-            <div class="col-md-3 col-lg-3 col-sm-12 mt-0">
+            <div class="col-md-3 col-lg-3 col-sm-12">
               <div class="card">
                 <p>$20</p>
                 <button type="submit" class="btn btn-primary">Donate Now</button>
@@ -278,7 +285,7 @@
   <section class="section-03">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-6 col-sm-12">
+        <div class="col-md-6 col-lg-6 col-sm-12 section-endo-info">
           <div class="endo-info">
             <div class="bread-crum">ENDORSEMENTS</div>
             <h1>WHAT PEOPLE SAY <br>
