--- a/mtj/aboutus.html
+++ b/mtj/aboutus.html
@@ -130,7 +130,14 @@
             </div>
           </div>
         </nav>
-        <button type="submit" class="btn btn-primary form-btn">Donate Now ></button>
+        <button type="submit" class="btn btn-primary form-btn">
+          <i class="icon icon-ex-small">
+            <svg focusable="false">
+              <use xlink:href="#icon_donate"></use>
+            </svg>
+          </i>
+          <span>Donate Now ></span>
+        </button>
       </div>
     </div>
 
